--- a/index.html
+++ b/index.html
@@ -1,9 +1,18 @@
-<html>
+<html ng-app="LunchApp">
     <head>
         <meta charset="utf-8">
         <title>Module 1</title>
+        <script src="angular.min.js"></script>
+        <script src="app.js"></script>
     </head>
-    <body>
-        <h1>Hello Module 1</h1>
+    <body ng-controller="LunchController">
+        <h1>Module 1 Exercise</h1>
+        <div>
+            <input type="text" ng-model="list">
+            <button ng-click="check()">Check</button>
+            <div ng-class="colorState">
+                {{message}}
+            </div>
+        </div>
     </body>
 </html>
