--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
             <button ng-click="check()">Check</button>
             <div ng-class="statusClass">
                 {{message}}
+                <br>
+                {{counterItems}}
             </div>
         </div>
     </body>
